# qry

./: .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
src/qry/: __init__.py  __main__.py  app.py  context.py
src/qry/application/: query_use_case.py
src/qry/connection/: __init__.py  config.py  connection_config.py  connection_manager.py  keyring.py  manager.py
src/qry/core/: __init__.py  constants.py  context.py  core_context.py  core_exceptions.py  core_types.py  exceptions.py  types.py
src/qry/database/: __init__.py  base.py  database_base.py  database_factory.py  database_sqlite.py  factory.py  sqlite.py
src/qry/domains/connection/: keyring.py  models.py  repository.py  service.py
src/qry/domains/database/: base.py  factory.py  mysql.py  postgres.py  sqlite.py
src/qry/domains/export/: base.py  csv.py  json.py  markdown.py
src/qry/domains/query/: completion.py  formatter.py  history.py  models.py  ports.py  query_formatter.py  repository.py  service.py  splitter.py
src/qry/domains/snippet/: models.py  repository.py  snippet_models.py  snippet_repository.py
src/qry/export/: __init__.py  base.py  csv.py  export_base.py  export_csv.py  export_json.py  json.py
src/qry/infrastructure/repositories/: json_history.py  snippet_yaml.py  yaml_connection.py  yaml_snippet.py
src/qry/query/: __init__.py  completion.py  executor.py  history.py  query_completion.py  query_executor.py  query_history.py  query_result.py  query_service.py  result.py  service.py
src/qry/settings/: __init__.py  config.py  paths.py  settings_config.py
src/qry/shared/: constants.py  exceptions.py  models.py  paths.py  settings.py  types.py
src/qry/ui/: __init__.py
src/qry/ui/screens/: __init__.py  main.py  screen_export.py  screen_history.py  screen_main.py  screen_snippet.py  screen_theme.py
src/qry/ui/themes/: __init__.py  dark.tcss
src/qry/ui/widgets/: __init__.py  editor.py  results.py  sidebar.py  statusbar.py  widget_completion.py  widget_editor.py  widget_error_bar.py  widget_results.py  widget_search_bar.py  widget_sidebar.py  widget_statusbar.py
tests/: conftest.py  test_context.py
tests/application/: test_query_use_case.py
tests/domains/connection/: test_connection_models.py  test_connection_service.py
tests/domains/database/: test_base.py  test_factory.py  test_mysql.py  test_postgres.py  test_sqlite.py
tests/domains/export/: test_export_integration.py  test_exporters.py
tests/domains/query/: test_formatter.py  test_history.py  test_query_formatter.py  test_query_models.py  test_query_service.py  test_splitter.py
tests/domains/snippet/: test_models.py  test_snippet_models.py
tests/infrastructure/: test_yaml_snippet.py
tests/shared/: test_exceptions.py  test_types.py
tests/ui/: test_screen_history.py  test_screen_snippet.py  test_screen_theme.py  test_widget_completion.py  test_widget_error_bar.py  test_widget_results.py  test_widget_search_bar.py  test_widget_statusbar.py
tests/unit/test_core/: test_context.py  test_types.py
tests/unit/test_database/: test_factory.py  test_sqlite.py
tests/unit/test_query/: __init__.py  test_result.py  test_service.py
