[project]
name = "qry"
version = "0.1.0"
description = "A fast and beautiful SQL TUI client for developers"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "qry contributors" }]
requires-python = ">=3.11"
keywords = ["sql", "database", "tui", "terminal", "cli", "postgres", "mysql", "sqlite"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Utilities",
]

dependencies = [
    "textual>=0.89.0",
    "rich>=13.9.0",
    "pyyaml>=6.0",
    "keyring>=25.0",
]

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.2", "asyncpg>=0.30"]
mysql = ["pymysql>=1.1", "aiomysql>=0.2"]
all = ["qry[postgres,mysql]"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "pyright>=1.1",
    "pre-commit>=4.0",
    "textual-dev>=1.7",
]

[project.scripts]
qry = "qry.__main__:main"

[project.urls]
Homepage = "https://github.com/yourusername/qry"
Repository = "https://github.com/yourusername/qry"
Documentation = "https://github.com/yourusername/qry#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qry"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["qry"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
include = ["src"]
exclude = ["**/__pycache__"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
