[project]
name = "qry"
version = "0.1.0"
description = "A fast and beautiful SQL TUI client for developers"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "qry contributors" }]
requires-python = ">=3.11"
keywords = ["sql", "database", "tui", "terminal", "cli", "postgres", "mysql", "sqlite"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Utilities",
]

dependencies = [
    "textual>=0.89.0",
    "rich>=13.9.0",
    "pyyaml>=6.0",
    "keyring>=25.0",
]

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.2"]
mysql = ["pymysql>=1.1"]
all = ["qry[postgres]", "qry[mysql]"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=1.0",
    "ruff>=0.8",
    "pyright>=1.1",
    "pre-commit>=4.0",
]

[project.scripts]
qry = "qry.__main__:main"

[project.urls]
Homepage = "https://github.com/GangEunzzang/qry"
Repository = "https://github.com/GangEunzzang/qry"
Documentation = "https://github.com/GangEunzzang/qry#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qry"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["qry"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
include = ["src"]
exclude = ["tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
